# spindisplay

./: .gitignore  README.md  pyproject.toml  webapp.py
projector_holo/: __init__.py  __main__.py  client.py  device_info.py  ftlv.py  session.py  udp_protocol.py
static/: index.html
