[project]
name = "projector_holo"
version = "0.3.0"
description = "Control surface for the Spin Display F56 holographic LED fan: TCP 50110 protocol client, persistent fan session, web UI, FTLV transcoder."
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "Pillow>=10.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
projector-holo = "projector_holo.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["projector_holo*"]
